--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   test-bot:
     strategy:
+      fail-fast: false
       matrix:
         os: [macOS-latest]
     runs-on: ${{ matrix.os }}
@@ -41,3 +42,12 @@ jobs:
         with:
           name: bottles
           path: '*.bottle.*'
+          
+      - name: Upload logs as artifact
+        if: failure() && github.event_name == 'pull_request'
+        uses: actions/upload-artifact@main
+        with:
+          name: logs (${{ matrix.os }})
+          path: |
+            /home/runner/.cache/Homebrew/Logs/*/*
+            /Users/runner/Library/Logs/Homebrew/*/*
