--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         version: ["11-arm64", "11", "10.15", "10.14"]
+      fail-fast: false
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ${{ matrix.version }}
     steps:
