--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,11 +6,7 @@ on:
 jobs:
   pr-pull:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
-    strategy:
-      matrix:
-        version: ["macos-latest", "macos-10.15", "macos-10.14"]
-      fail-fast: false
-    runs-on: ${{ matrix.version }}
+    runs-on: ["macos-latest", "macos-10.15", "macos-10.14"]
     steps:
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
