--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,14 +16,14 @@ jobs:
 
       - name: Pull bottles
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ SECRET_TOKEN }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ HOMEBREW_SECRET }}
           PULL_REQUEST: ${{ github.event.pull_request.number }}
         run: brew pr-pull --debug --tap=$GITHUB_REPOSITORY $PULL_REQUEST
 
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
-          token: ${{ SECRET_TOKEN }}
+          token: ${{ HOMEBREW_SECRET }}
           branch: main
 
       - name: Delete branch
