--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macOS-latest]
+        os: ["macos-latest", "macos-10.15", "macos-10.14"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
