--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,11 @@ on:
 jobs:
   pr-pull:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
-    runs-on: ["macos-latest", "macos-10.15", "macos-10.14"]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["macos-latest", "macos-10.15", "macos-10.14"]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
