--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,11 @@ on:
 jobs:
   pr-pull:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
-    runs-on: ["macos-latest", "macos-10.15", "macos-10.14"]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["macos-latest", "macos-10.15", "macos-10.14"]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -16,14 +20,14 @@ jobs:
 
       - name: Pull bottles
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ HOMEBREW_SECRET }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_SECRET }}
           PULL_REQUEST: ${{ github.event.pull_request.number }}
         run: brew pr-pull --debug --tap=$GITHUB_REPOSITORY $PULL_REQUEST
 
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
-          token: ${{ HOMEBREW_GITHUB_API_TOKEN }}
+          token: ${{ secrets.HOMEBREW_SECRET }}
           branch: main
 
       - name: Delete branch
