--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macOS-11"]
+        os: ["ubuntu-latest", "macos-11.0"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
