--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, macos-11]
+        platform: [macos-11]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Set up Homebrew
